@@ -290,7 +290,43 @@
         <!-- Disable Doclint on JDK8+ -->
         <javadoc.opts>-Xdoclint:none</javadoc.opts>
         <!-- Surefire Argument Line -->
-        <java.surefire.options>-Xmx1g --add-exports java.base/jdk.internal.ref=ALL-UNNAMED</java.surefire.options>
+        <java.surefire.options>
+          -Xmx1g
+          --add-opens java.base/java.lang=ALL-UNNAMED
+          --add-opens java.base/java.lang.module=ALL-UNNAMED
+          --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+          --add-opens java.base/java.util=ALL-UNNAMED
+          --add-opens java.base/java.net=ALL-UNNAMED
+          --add-opens java.base/java.io=ALL-UNNAMED
+          --add-opens java.base/java.util.regex=ALL-UNNAMED
+          --add-opens java.base/java.security=ALL-UNNAMED
+          --add-opens java.naming/javax.naming.spi=ALL-UNNAMED
+          --add-opens java.base/javax.security.auth.login=ALL-UNNAMED
+          --add-opens java.base/java.nio.charset=ALL-UNNAMED
+          --add-opens java.base/java.security.cert=ALL-UNNAMED
+          --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+          --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
+          --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+          --add-opens java.base/jdk.internal.math=ALL-UNNAMED
+          --add-opens java.base/jdk.internal.module=ALL-UNNAMED
+          --add-opens java.base/jdk.internal.util.jar=ALL-UNNAMED
+          --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+          --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+          --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+          --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+          --add-opens java.base/java.nio=ALL-UNNAMED
+
+          --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+          --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+          --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+          --add-exports java.base/sun.security.util=ALL-UNNAMED
+          --add-exports java.base/sun.security.jca=ALL-UNNAMED
+          --add-exports java.base/jdk.internal.util.random=ALL-UNNAMED
+          --add-exports java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED
+          --add-exports java.rmi/sun.rmi.registry=ALL-UNNAMED
+          --add-exports java.rmi/sun.rmi.server=ALL-UNNAMED
+          --add-exports java.sql/java.sql=ALL-UNNAMED
+        </java.surefire.options>
         <!-- JavaDoc Setting Properties -->
         <javadoc.options>-J-Xms2g -J-Xmx2g</javadoc.options>
       </properties>
@@ -1943,6 +1979,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <argLine>${java.surefire.options}</argLine>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -2141,7 +2180,7 @@
 				<inherited>true</inherited>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.10.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
